[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "catchpy"
dynamic = ["version"]
description = "Annotation storage backend"
readme = "README.rst"
license = ""
authors = [
    { name = "nmaekawa", email = "nmaekawa@g.harvard.edu" },
]
keywords = [
    "catchpy",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "Django~=4.2",
    "iso8601~=2.0.0",
    "jsonschema==4.18.4",
    "PyJWT==2.8.0",
    "PyLD==2.0.3",
    "python-dateutil==2.8.2",
    "python-dotenv==1.0.0",
    "pytz==2023.3",
    "requests~=2.31.0",
    "django-log-request-id==2.1.0",
    "django-cors-headers~=4.2.0",
]

[tool.hatch.version]
path = "catchpy/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/catchpy",
]

[project.urls]
Homepage = "https://github.com/nmaekawa/catchpy"

[tool.isort]
profile = "black"
skip = ["migrations", ".tox"]

[tool.black]
target-version = ["py36"]
exclude = '''
/(
        \.eggs
      | \.git
      | \.tox
      | \.venv
      | build
      | dist
      | migrations
)/
'''

[tool.tox]
legacy_tox_ini = """
[tox]
env_list =
    py310
    py311
    py312

[testenv]
deps =
    -r{toxinidir}/catchpy/requirements/dev.txt
commands =
    pytest -v
passenv = CATCHPY_DOTENV_PATH


[flake8]
ignore =
    # too many blank lines
    E303,
    # blank line at the end of file
    W391

exclude =
    .tox,
    .git,
    __pycache__,
    build,
    dist
"""
